--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-server.port=8085
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce?createDatabaseIfNotExist=true
+server.port=8082
+spring.datasource.url=jdbc:mysql://localhost:3306/productCatalog?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=pluralsight
 
